# pyprof

./: README.md  mpiprof.py  papiprof.py  papiprof_old.py  perf_deluxe.py  perfdeluxe  pycounters.py  pyproject.toml  setup.cfg  timing.py
examples/: ex_01_fftconvolve.py  ex_02_vector_add.py  ex_03_tiled_vector_add.py  ex_04_timing_simple.py  ex_05_papiprof_simple.py
pyprof/: timing.py
pyprof/examples/: ex_01_fftconvolve.py  ex_01_timing_simple.py  ex_02_vector_add.py  ex_02_write_to_file.py  ex_03_tiled_vector_add.py  ex_04_timing_simple.py  ex_05_papiprof_simple.py
src/: Makefile  libpapi.cpp  main.cpp
src/haswell-events/: L1-cache-events.txt  L2-cache-events.txt  LLC-events.txt  branch-events.txt  cache-events.txt  cycle-events.txt  cycles-stalls-events.txt  floats-events.txt  mem-events.txt  memory-events.txt  papi_native_events.txt  papi_preset_events.txt
