[metadata]
name = pyprof
author = Konstantinos Iliakis
author_email = konstantinos.iliakis@cern.ch
maintainer = Konstantinos Iliakis
description = Simple library for annotated regions time profiling
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
license_files = 
    LICENSE.txt
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    prettytable
include_package_data = True

[options.extras_require]
test = 
    pytest
lint = 
    flake8
    isort
    pylint
all = 
    %(test)s
    %(lint)s
